# game-of-life

./: CMakeLists.txt  README.md  logic.c  logic.h  main.c  sdl_utils.c  sdl_utils.h  specs.txt
